--- a/tickets.css
+++ b/tickets.css
@@ -43,15 +43,8 @@ body {
   padding-left: 10px;
 }
 
-.navlinks1,
-.navlinks2, {
-  margin-left: 200px;
-  margin-right: 200px;
-}
-
 .navlinks1 {
   padding-bottom: 10px;
-  padding-right: 60px;
 }
 
 a {
@@ -102,7 +95,7 @@ span {
 .home {
   display: flex;
   justify-content: flex-end;
-  padding: 50px;
+  padding: 25px;
 }
 
 .home-icon {
@@ -122,7 +115,6 @@ hr {
 
 h1 {
   text-align: center;
-  margin: 0;
 }
 
 .syl {
@@ -234,7 +226,12 @@ ul {
   .tickets,
   .lunch,
   footer {
-    width: 187vw;
+    margin: 0;
+  }
+
+  .li1 {
+    text-align: center;
+    list-style: none;
   }
 
   .step1,
@@ -271,5 +268,59 @@ ul {
 @media screen and (min-width: 1025px) {
   .mobile-nav {
     display: none;
+  }
+}
+
+@media
+  only screen and (max-width: 760px) {
+  table,
+  thead,
+  tbody,
+  th,
+  td,
+  tr {
+    display: block;
+    font-size: 12px;
+  }
+
+  tr {
+    border: 1px solid #ccc;
+  }
+
+  thead tr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+
+  td {
+    border: none;
+    border-bottom: 1px solid #eee;
+    position: relative;
+    padding-left: 50%;
+  }
+
+  td::before {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap;
+  }
+
+  td:nth-of-type(1)::before { content: "Ticket"; }
+  td:nth-of-type(2)::before { content: "1-Day-Ticket"; }
+  td:nth-of-type(3)::before { content: "1-Day-Ticket"; }
+  td:nth-of-type(4)::before { content: "2-Day-Ticket"; }
+  td:nth-of-type(5)::before { content: "CC Affiliate/Partners"; }
+
+  ul {
+    display: block;
+    padding: 0;
+  }
+
+  .li3 {
+    padding-bottom: 10px;
   }
 }
